--- a/simple_robot_simulator/Cargo.toml
+++ b/simple_robot_simulator/Cargo.toml
@@ -5,13 +5,16 @@ authors = ["Endre Erős <endree@chalmers.se>"]
 edition = "2021"
 
 [dependencies]
-r2r = "0.6.3"
+r2r = "0.7.1"
 futures = "0.3.15"
 tokio = { version = "1", features = ["full"] }
 #serde = "1.0.130"
 #chrono = "0.4.19"
 tempfile = "3.3.0"
 k = "0.27.1"
+
+[profile.colcon]
+inherits = "release"
 
 [[bin]]
 name = "simple_robot_simulator"
